fix whitespace issue

--- a/src/components/home/sections/sections.scss
+++ b/src/components/home/sections/sections.scss
@@ -3,21 +3,20 @@
 
 /*    WELCOME SECTION     */
 .welcome-section {
-  width: 100%;
-  padding-top: 25%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 85vh;
-
-  @media only screen and (min-width: 992px) {
-      flex-direction: row;
-      justify-content: center;
-      align-items: flex-start;
-      margin-top: 15%;
-      height: 70vh;
-  }
- 
+    width: 100%;
+    padding-top: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 85vh;
+  
+    @media only screen and (min-width: 992px) {
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 10%;
+        height: 70vh;
+    }
   .welcome-text-container {
       display: flex;
       flex-direction: column;
